k8s/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techwave-app
  labels:
    name: techwave-app
