k8s/app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: techwave-app
spec:
  selector:
    app: frontend
    version: blue  
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
